tests/pos/annlet.hs
one :: {v:Int| v == 1}
one = let zero :: { v:Int | v == 0} = 0 in zero + 1
