tests/neg/annlet.hs
one :: {v:Int| v == 1}
one = let zero :: { v:Bool | 0 == 0} = 0 in zero + 1
